# HoudiniEngineFor3dsMax

./: CMakeLists.txt  HoudiniVersion  README.md
src/: DllEntry.cpp  HEMAX_3dsMaxInput.cpp  HEMAX_3dsMaxInput.h  HEMAX_3dsmaxHda.cpp  HEMAX_3dsmaxHda.h  HEMAX_Asset.cpp  HEMAX_Asset.h  HEMAX_CurvePlugin.cpp  HEMAX_CurvePlugin.h  HEMAX_CustomAttributeContainer.cpp  HEMAX_CustomAttributeContainer.h  HEMAX_DisplayGeoNode.cpp  HEMAX_DisplayGeoNode.h  HEMAX_EditableNode.cpp  HEMAX_EditableNode.h  HEMAX_Events.cpp  HEMAX_Events.h  HEMAX_GeometryHda.cpp  HEMAX_GeometryHda.h  HEMAX_GeometryMouseCallback.cpp  HEMAX_GeometryMouseCallback.h  HEMAX_GeometryPlugin.cpp  HEMAX_GeometryPlugin.h  HEMAX_HAPISession.cpp  HEMAX_HAPISession.h  HEMAX_Hda.cpp  HEMAX_Hda.h  HEMAX_HoudiniApi.cpp  HEMAX_HoudiniApi.h  HEMAX_Input.cpp  HEMAX_Input.h  HEMAX_InputInstance.cpp  HEMAX_InputInstance.h  HEMAX_InputMerge.cpp  HEMAX_InputMerge.h  HEMAX_Input_Geometry.cpp  HEMAX_Input_Geometry.h  HEMAX_Input_NURBS.cpp  HEMAX_Input_NURBS.h  HEMAX_Input_Spline.cpp  (+58 more)
src/UI/: HEMAX_AssetSelection.cpp  HEMAX_AssetSelection.h  HEMAX_DebugWidget.cpp  HEMAX_DebugWidget.h  HEMAX_HDASelectionDialog.cpp  HEMAX_HDASelectionDialog.h  HEMAX_HDAWidget.cpp  HEMAX_HDAWidget.h  HEMAX_MaxHoudiniAssetWidget.cpp  HEMAX_MaxHoudiniAssetWidget.h  HEMAX_OptionsDialog.cpp  HEMAX_OptionsDialog.h  HEMAX_OptionsWidget.cpp  HEMAX_OptionsWidget.h  HEMAX_ParameterWidget.cpp  HEMAX_ParameterWidget.h  HEMAX_SessionWidget.cpp  HEMAX_SessionWidget.h  HEMAX_ShelfGroup.cpp  HEMAX_ShelfGroup.h  HEMAX_ShelfTab.cpp  HEMAX_ShelfTab.h  HEMAX_UI.cpp  HEMAX_UI.h  HEMAX_VersionDialog.cpp  HEMAX_VersionDialog.h
